--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 body {
     background-color: white;
-/*  background-image: url("/images/equip-check-background.png"); */
+    background-image: url("/images/equip-check-background.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -25,6 +25,7 @@ body {
 /* font-family: 'Big Shoulders Display' <--fonte principal */
 
 header {
+    height: 5rem;
     display: flex;
     justify-content: space-between;
     background-color: var(--black);
@@ -48,44 +49,44 @@ nav {
 
 
 .blocos {
-    position: absolute;
     color: var(--white);
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: space-around;
-    border-radius: 30px;
+    display: flex;
+    min-height: calc(100vh - 5rem);
+    justify-content: space-evenly;
 }
 .bloco1 {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
     margin: 2rem 2rem;
-    border-radius: 30px;
+    border-radius: 2rem;
     justify-content: center;
-    align-items: center;
     text-align: center;
     background-color: rgba(217, 97, 97, 0.8);
     transition: all 0.4s;
 }
 .bloco1:hover{scale: 1.06;}
 
-.bloco1 .imagem {
-    position: relative;
-    left: 25%;
-    background-image: url("/images/effects-icon.png");
+.bloco1 img {
+    margin-top: 2rem;
     background-size: cover;
-    outline-style: solid;
-    outline-width: 5%;
-    outline-color: var(--secondary);
-    border-radius: 10%;
+    width: 10rem;
+    height: 10rem;
+    border: 5px solid var(--secondary);
+    border-radius: 15%;
 }
 .bloco1 p {
-    min-width: 50%;
-    padding-left: 25%;
+    margin: 0 5rem;
+    align-self: center;
 }
 
 .bloco2 {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
     margin: 2rem 2rem;
-    border-radius: 30px;
+    border-radius: 2rem;
     justify-content: center;
-    align-items: center;
     text-align: center;
     background-color: rgba(171, 18, 18, 0.8);
     transition: all 0.4s;
@@ -93,27 +94,29 @@ nav {
 .bloco2:hover{scale: 1.06;}
 
 .bloco2 .imagem {
-    position: relative;
-    left: 25%;
+    margin-top: 2rem;
     background-image: url("/images/instruments_icon.png");
     background-size: cover;
-    width: 30%;
-    height: 28%;
+    width: 10rem;
+    height: 10rem;
     border-style: solid;
     border-width: 5px;
     border-color: var(--terciary);
-    border-radius: 30px;
+    border-radius: 15%;
 }
 .bloco2 p {
-    width: 50%;
-    padding-left: 25%;
+    margin: 0 5rem;
+    align-self: center;
 }
 
+
 .bloco3 {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
     margin: 2rem 2rem;
-    border-radius: 30px;
+    border-radius: 2rem;
     justify-content: center;
-    align-items: center;
     text-align: center;
     background-color: rgba(255, 66, 66, 0.8);
     transition: all 0.4s;
@@ -121,20 +124,19 @@ nav {
 .bloco3:hover{scale: 1.06;}
 
 .bloco3 .imagem {
-    position: relative;
-    left: 25%;
+    margin-top: 2rem;
     background-image: url("/images/amps-and-cabinets-icon.png");
     background-size: cover;
-    width: 30%;
-    height: 28%;
+    width: 10rem;
+    height: 10rem;
     border-style: solid;
     border-width: 5px;
     border-color: var(--primary);
-    border-radius: 30px;
+    border-radius: 15%;
 }
 .bloco3 p {
-    width: 50%;
-    padding-left: 25%;
+    margin: 0 5rem;
+    align-self: center;
 }
 
 
