--- a/style.css
+++ b/style.css
@@ -27,8 +27,12 @@ body {
 header {
     height: 5rem;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     background-color: var(--black);
+}
+.logo {
+    cursor: pointer;
 }
 
 
@@ -43,6 +47,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    cursor: pointer;
     transition: all 0.4s;
 }
 .navitems:hover {scale: 1.2;}
@@ -58,25 +63,27 @@ nav {
     display: flex;
     flex-direction: column;
     width: 30%;
-    margin: 2rem 2rem;
+    margin: 2rem 2rem 2rem 2rem;
     border-radius: 2rem;
-    justify-content: center;
+    justify-content: start;
     text-align: center;
     background-color: rgba(217, 97, 97, 0.8);
+    cursor: pointer;
     transition: all 0.4s;
 }
 .bloco1:hover{scale: 1.06;}
 
 .bloco1 img {
-    margin-top: 2rem;
-    background-size: cover;
-    width: 10rem;
-    height: 10rem;
+    align-self: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    width: 12rem;
+    height: 12rem;
     border: 5px solid var(--secondary);
     border-radius: 15%;
 }
 .bloco1 p {
-    margin: 0 5rem;
+    margin: 1.5rem 5rem;
     align-self: center;
 }
 
@@ -86,26 +93,25 @@ nav {
     width: 30%;
     margin: 2rem 2rem;
     border-radius: 2rem;
-    justify-content: center;
+    justify-content: start;
     text-align: center;
     background-color: rgba(171, 18, 18, 0.8);
+    cursor: pointer;
     transition: all 0.4s;
 }
 .bloco2:hover{scale: 1.06;}
 
-.bloco2 .imagem {
-    margin-top: 2rem;
-    background-image: url("/images/instruments_icon.png");
-    background-size: cover;
-    width: 10rem;
-    height: 10rem;
-    border-style: solid;
-    border-width: 5px;
-    border-color: var(--terciary);
+.bloco2 img {
+    align-self: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    width: 12rem;
+    height: 12rem;
+    border: 5px solid var(--terciary);
     border-radius: 15%;
 }
 .bloco2 p {
-    margin: 0 5rem;
+    margin: 1.5rem 5rem;
     align-self: center;
 }
 
@@ -116,26 +122,25 @@ nav {
     width: 30%;
     margin: 2rem 2rem;
     border-radius: 2rem;
-    justify-content: center;
+    justify-content: start;
     text-align: center;
     background-color: rgba(255, 66, 66, 0.8);
+    cursor: pointer;
     transition: all 0.4s;
 }
 .bloco3:hover{scale: 1.06;}
 
-.bloco3 .imagem {
-    margin-top: 2rem;
-    background-image: url("/images/amps-and-cabinets-icon.png");
-    background-size: cover;
-    width: 10rem;
-    height: 10rem;
-    border-style: solid;
-    border-width: 5px;
-    border-color: var(--primary);
+.bloco3 img {
+    align-self: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    width: 12rem;
+    height: 12rem;
+    border: 5px solid var(--primary);
     border-radius: 15%;
 }
 .bloco3 p {
-    margin: 0 5rem;
+    margin: 1.5rem 5rem;
     align-self: center;
 }
 
@@ -148,7 +153,7 @@ nav {
 
 p {
     font-family: 'Kulim Park';
-    font-size: 20px;
+    font-size: 2rem;
 }
 
 h1, h2, h3, h4, h5 {
@@ -162,7 +167,7 @@ h1, h2, h3, h4, h5 {
   
   h2 {font-size: 3.158rem; /* 50.56px */}
   
-  h3 {font-size: 2.369rem; /* 37.92px */}
+  h3 {font-size: 3rem; /* 37.92px */}
   
   h4 {font-size: 1.777rem; /* 28.48px */}
   
