--- a/amps-and-cabinets/amps-and-cabinets-style.css
+++ b/amps-and-cabinets/amps-and-cabinets-style.css
@@ -81,7 +81,7 @@ nav {
 .principal{
     color: var(--white);
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto;
     gap: 2rem;
     padding: 2rem;
     align-items: center;
@@ -94,7 +94,7 @@ nav {
 }
 
 .searchbar{
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 5;
     display: flex;
     align-items: center;
     justify-content: center;
