--- a/effects/effects-style.css
+++ b/effects/effects-style.css
@@ -78,10 +78,15 @@ nav {
     min-width: 15rem;
 }
 
+.checkers {
+    font-family: 'Kulim Park';
+    font-size: 1.5rem;
+}
+
 .principal{
     color: var(--white);
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto;
     gap: 2rem;
     padding: 2rem;
     align-items: center;
@@ -94,7 +99,7 @@ nav {
 }
 
 .searchbar{
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 5;
     display: flex;
     align-items: center;
     justify-content: center;
